--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=backend
+#server.port=8000
+#jdbc:postgresql://localhost:5432/users
+server.port=8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/users
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
